--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
-.App {
-  text-align: center;
+body {
+  margin: 0 auto;
+  font-family: sans-serif;
+  background-color: rgb(87, 87, 87);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.todo__title {
+  font-size: 30px;
+  color: white;
+  margin: 20px 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.todo__Input {
+  outline: none;
+  border: none;
+  border-radius: 20px;
+  width: 270px;
+  height: 40px;
+  padding: 0 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.add__button {
+  width: 100px;
+  height: 35px;
+  border-radius: 5px;
+  border: none;
+  margin: 20px 0;
+  cursor: pointer;
+  background-color: aqua;
+  font-size: 16px;
+  font-weight: bold;
+  transition: 500ms all ease;
+}
+
+.add__button:hover {
+  background-color: rgb(31, 206, 206);
+}
+
+.delete__button {
+  width: 100px;
+  height: 35px;
+  border-radius: 5px;
+  border: none;
+  margin: 0 20px;
+  cursor: pointer;
+  background-color: aqua;
+  font-size: 16px;
+  font-weight: bold;
+  transition: 500ms all ease;
+}
+
+.delete__button:hover {
+  background-color: rgb(31, 206, 206);
+}
+
+.todo {
+  color: rgb(255, 255, 255);
+  list-style-type: none;
+  font-size: 24px;
+  font-weight: bold;
 }
